--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "angular": "^1.7.8",
     "angular-chart.js": "^1.1.1",
     "angular-route": "^1.7.8",
+    "animate.css": "^3.7.0",
     "chart.js": "^2.8.0",
     "express": "^4.16.4",
     "tailwindcss": "^0.7.4"
