--- a/api/src/main/resources/application-dev.properties
+++ b/api/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
-pring.profiles.active=prod
-flyway.locations=classpath:/db/migration
+pring.profiles.active=dev
+flyway.locations=classpath:/dev/db/migration
 spring.jpa.database = MYSQL
 spring.datasource.url=jdbc:mysql://localhost/api_dashboard?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
